@@ -1,4 +1,4 @@
-$Id: THANKS,v 1.21 2000/02/10 09:42:32 stelian Exp $
+$Id: THANKS,v 1.22 2000/02/26 01:35:48 stelian Exp $
 
 Dump and restore were written by the people of the CSRG at the University
 of California, Berkeley.
@@ -27,6 +27,7 @@ Rob Cermak		cermak@ahab.rutgers.edu
 Isaac Chuang		ike@isl.stanford.edu
 Rainer Clasen		bj@ncc.cicely.de
 Abhijit Dasgupta	abhijit@ans.net
+Andreas Dilger		adilger@home.com
 Jason Fearon		jasonf@netrider.org.au
 Jeremy Fitzhardinge	jeremy@goop.org
 Eirik Fuller		eirik@netcom.com
